src/atoms/CardMenu/CardMenu.scss
@use '../../settings/typography/content' as typography;
@use '../../settings/config';
@use '../../settings/depth';

.card-menu-option {
  @include typography.body-regular-primary;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;
  width: 100%;
  padding: config.$space-3x;
  gap: config.$space-3x;
  border-radius: config.$corner-radius-xxs;
  border: none;
  text-decoration: none;
  cursor: default;
  &:hover {
    text-decoration: none;
  }
  .icon {
    width: config.$icon-size-4x;
    min-width: config.$icon-size-4x;
    height: config.$icon-size-4x;
    > svg {
      width: 100%;
      height: 100%;
    }
  }

  .left {
    display: flex;
    flex-direction: column;
    gap: config.$space-2x;

    .title-container {
      display: flex;
      width: 100%;
      gap: config.$space-2x;
      justify-content: flex-start;
      align-items: center;
      flex: 1;
    }

    .content {
      margin: 0;
      text-align: left;
    }
  }

  .right {
    margin-top: auto;
    margin-bottom: auto;
  }

  &.primary {
    background: var(--neutral-white);
    border-top: 1px solid transparent;
    border-bottom: 1px solid var(--neutral-color-200);
    &:first-child {
      border-top: 1px solid var(--neutral-color-200);
    }
    &:has(+ .active) {
      // Remove border-bottom if next sibling is active
      border-bottom: 1px solid transparent;
    }
    &.active {
      background-color: transparent;
      border-top: 1px solid var(--primary-color-600);
      border-bottom: 1px solid var(--primary-color-600);
    }

    &.error {
      border: 1px solid var(--error-color-1000);
      background-color: var(--error-color-50);
    }

    .icon {
      > svg {
        fill: var(--primary-color-600);
        path {
          fill: var(--primary-color-600);
        }
      }
    }

    &:not(.disabled):hover {
      background: var(--primary-color-50);
    }

    &.disabled {
      background: var(--neutral-color-50);
      @include typography.body-regular-disabled;

      .icon {
        > svg {
          fill: var(--neutral-color-400);
          path {
            fill: var(--neutral-color-400);
          }
        }
      }
    }
  }
}

